--- a/proyecto1.html
+++ b/proyecto1.html
@@ -3,6 +3,6 @@
 <body>
 
 <div class="flourish-embed flourish-chart" data-src="visualisation/10430497"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
-
+<div class="flourish-embed flourish-map" data-src="visualisation/10194903"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 </body>
 </html>
