--- a/proyecto1.html
+++ b/proyecto1.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+ <h1>Ranking de top 5 Banderas de 2021</h1>
+   <h2>en volumen de venta</h2>
 
 <div class="flourish-embed flourish-chart" data-src="visualisation/10430497"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
-<div class="flourish-embed flourish-map" data-src="visualisation/10194903"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+
+ <h1>Precios de Nafta Súper 2022</h1>
+  <div class="flourish-embed flourish-map" data-src="visualisation/10194903"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 </body>
 </html>
