--- a/proyecto1.html
+++ b/proyecto1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
- <h1>Ranking de top 5 Banderas de 2021</h1>
+ <title>Ranking de top 5 Banderas de 2021</title>
    <h2>en volumen de venta</h2>
 
 <div class="flourish-embed flourish-chart" data-src="visualisation/10430497"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
