--- a/proyecto1.html
+++ b/proyecto1.html
@@ -8,5 +8,8 @@
 
  <h1>Precios de Nafta Súper 2022</h1>
   <div class="flourish-embed flourish-map" data-src="visualisation/10194903"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
-</body>
+
+ <iframe title="energia_2" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=e373b7dc-2a50-4057-a0fe-dea8cb82b5bc&autoAuth=true&ctid=a1f50a97-21c0-49a7-a9d4-f244ebb42da7&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXNvdXRoLWNlbnRyYWwtdXMtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D" frameborder="0" allowFullScreen="true"></iframe>
+ 
+ </body>
 </html>
